[tool.poetry]
name = "th2-cli"
version = "0.1.0"
description = ""
authors = ["Nikolay Dorofeev <dorich2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"
cli-utils = "^1.0.6"
pyhelm = "^2.14.5"
kubernetes = "^24.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
