[tool.poetry]
name = "th2-cli"
version = "0.1.0"
description = ""
authors = ["Nikolay Dorofeev <dorich2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
kubernetes = "^24.2.0"
simple-term-menu = "^1.5.0"
avionix = "^0.4.5"
cryptography = "^37.0.4"
colorama = "^0.4.5"
cassandra-driver = "^3.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
